--- a/main.css
+++ b/main.css
@@ -34,14 +34,14 @@ canvas {
 
 .name {
     position: fixed;
-    top: 20%;
+    top: 10%;
     left: 50%;
     width: 100%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(140, 0, 255);
     text-align: center;
-    font-size: 4vw;
-    text-shadow: 0 0 5px #000000;
+    font-size: 20px;
+    text-shadow: 0 0 5px #ffffff;
     user-select: none;
     pointer-events: none;
 }
